tests/core/snapshots/test-merge-invalid.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Type mismatch: expected `String`, got `Int`",
    "trace": [
      "Foo",
      "a"
    ],
    "description": null
  }
]
