tests/core/snapshots/test-merge-query.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(port: 3000) @upstream {
  query: Query
}

type Query {
  hello: String @expr(body: "world")
  hi: String @expr(body: "world")
}
