tests/core/snapshots/test-merge-right-with-link-config.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream(allowedHeaders: ["Authorization"]) @link(src: "stripe-types.graphql", type: Config) {
  query: Query
}

type Foo {
  bar: String
}

type Query {
  foo: Foo @expr(body: {bar: "foo"})
}
