tests/core/snapshots/test-merge-server-sdl.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  foo: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
