tests/core/snapshots/test-merge-server-sdl.md_merged.snap
---
source: tests/core/spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

type Query {
  foo: [User] @http(path: "/users")
}

type User {
  id: Int
  name: String
}
