tests/core/snapshots/test-missing-mutation-resolver.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Mutation",
      "createUser"
    ],
    "description": null
  }
]
