tests/core/snapshots/test-missing-query-resolver.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "tests/execution/test-missing-query-resolver.md 7#3"
    ],
    "description": null
  },
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "tests/execution/test-missing-query-resolver.md 6#3"
    ],
    "description": null
  }
]
