tests/core/snapshots/test-missing-root-types.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Query type is not defined",
    "trace": [
      "tests/execution/test-missing-root-types.md 2#10"
    ],
    "description": null
  },
  {
    "message": "Mutation type is not defined",
    "trace": [
      "MutationDef"
    ],
    "description": null
  }
]
